Fixed layout issues on very small screens

--- a/src/index.css
+++ b/src/index.css
@@ -215,9 +215,8 @@ article {
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  margin: 2rem 0;
-  padding: 1rem 2rem;
   background-color: var( --veryLightGreen);
+  margin: 1rem 0;
 }
 article h2 {
   font-size: 2rem;
@@ -227,10 +226,18 @@ article p {
   color: var(--originalGreen);
   font-weight: bolder;
 }
+article img {
+  padding: 1rem;
+}
+.textBox {
+  text-align: justify;
+  padding: 1rem;
+}
 .row {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
 }
 .column {
@@ -239,22 +246,14 @@ article p {
 }
 
 /* Home */
-.aboutLogoImg {
+#aboutLogoImg {
   max-height: 11rem;
-  margin: 1rem;
 }
-.aboutText {
-  width: 15rem;
-  text-align: justify;
-  margin: 0 1rem;
-}
-.responsiveQR {
+#responsiveQR {
   max-height: 16rem;
-  margin: 2rem;
 }
-.responsiveText {
-  width: 19rem;
-  text-align: justify;
+#responsiveArticle .textBox {
+  max-width: 30rem;
 }
 
 
